# Pet-Early-Warning-Platform

./: .gitignore  README.md  docker-compose.yml  pet_analysis.db
ai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
ai/docs/: cost-model.md  hybrid-rag-baseline.md
ai/scripts/: analyze_distances.py  eval_common.py  eval_embedding.py  eval_rag.py
ai/src/: __init__.py  config.py  main.py
ai/src/api/: deps.py
ai/src/api/middleware/: size_limit.py
ai/src/api/routes/: hamster.py  health.py  rag.py
ai/src/api/schemas/: rag.py
ai/src/application/: analyze_hamster.py  answer_warning_customer.py  ingest_knowledge.py  retrieve_context.py  warning_with_rag.py
ai/src/bootstrap/: container.py  settings.py
ai/src/clients/: backend_client.py  embedding_client.py  ezviz_client.py
ai/src/clients/llm/: __init__.py  _langchain_chat.py  base.py  client.py  ollama.py  types.py
ai/src/domain/: models.py  repositories.py
ai/src/domain/services/: analysis.py  bowl.py  chunking.py  detection.py  movement.py  prompt_builder.py  retrieval.py  scoring.py
ai/src/infrastructure/external_services/: embedding_client.py  ezviz_client.py  image_processor.py  llm_client.py  timestamp_extractor.py
ai/src/infrastructure/persistence/: chat_history_repository.py  memory_state_repository.py  sqlite_frame_repository.py  vector_store_repository.py
ai/src/interfaces/ioc/: container.py
ai/src/interfaces/middlewares/: size_limit.py
ai/src/repositories/: bm25_index.py  facts_repository.py  frame_repository.py  preference_repository.py  protocols.py  state_repository.py  vector_store.py
ai/src/services/hamster/: analysis.py  bowl.py  movement.py  scoring.py  service.py
ai/src/services/rag/: __init__.py  chat_history.py  chunking.py  (+7 more)
ai/src/shared/: config.py
ai/src/utils/: auth.py  parsing.py  sse.py
(+206 files in other folders)
