[tool.poetry]
name = "yingshi-ai"
version = "1.0.0"
description = "基于萤石AI的宠物健康监测服务（仓鼠异常监测）"
authors = ["yingshi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
python-multipart = "0.0.6"
aiofiles = "23.2.1"
pydantic = "2.5.0"
requests = "^2.31.0"
pillow = "^10.0.0"
pytesseract = "^0.3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.scripts]
yingshi-ai = "run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
