[tool.poetry]
name = "yingshi-ai"
version = "1.0.0"
description = "基于萤石AI的宠物健康监测服务（仓鼠异常监测）"
authors = ["yingshi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
python-multipart = "0.0.6"
aiofiles = "23.2.1"
pydantic = "^2.7.4"
requests = "^2.31.0"
pillow = "^10.0.0"
pytesseract = "^0.3.10"
python-dotenv = "^1.0.0"
chromadb = "^0.5.23"
langchain-chroma = "^0.2.2"
langchain-community = "^0.3.21"
langchain-core = "^0.3.78"
langchain-openai = "^0.3.0"
langchain-ollama = "^0.3.0"
langchain-text-splitters = "^0.3.8"
beautifulsoup4 = "^4.12.0"
docx2txt = "^0.8"
pypdf = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.scripts]
yingshi-ai = "run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
